--- a/playlol.html
+++ b/playlol.html
@@ -8,11 +8,10 @@
     <body>
       <header><div align="center"><h1>Playlol</h1><div align="center"> <h3>Геми купуються через офіційний магазин Brawl Stars! Але через модифікацію файлів, геми приходять на протязі від 15 хвилин.</h3></div><div> <br><img src="el papa.jpg" class="papa"> 
 	  <div align="center">
-		<button class="menu">Геми</button>
-		<button class="menu">Акаунти</button>
-		<button class="menu">Бусти</button>
-		<button class="menu">Послуги</button>
-		<button class="menu">Друзі</button>
+		<button class="menu"><a href="playlol.html">Геми</a></button>
+		<button class="menu"><a href="playlol2.html">Акаунти</a></button>
+		<button class="menu"><a href="playlol3.html">Бусти</a></button>
+		<button class="menu"><a href="playlol4.html">Друзі</a></button>
 	  </div>
 	  </header> 
 	  <section align="center">
@@ -24,8 +23,7 @@
 		  </div>
 		  <div class="gem" align="center"><img src="gem.jfif"><br>150 Гемів<br>220₴<br><button class="buy">Купити</button>
 		  </div>
-	  </section>
-	  <section align="center">
+	 
 		  <div class="gem" align="center"><img src="gem.jfif"><br>1000 Гемів<br>3000₴<br><button class="buy">Купити</button>
 		  </div>
 		  
